--- a/frontend/bike/package.json
+++ b/frontend/bike/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
