--- a/frontend/bike/package.json
+++ b/frontend/bike/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "echarts": "^5.5.0",
     "element-plus": "^2.7.5",
     "express": "^4.19.2",
     "vue": "^3.4.21",
