--- a/frontend/bike/package.json
+++ b/frontend/bike/package.json
@@ -19,7 +19,8 @@
     "express": "^4.19.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
